--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "grunt-contrib-uglify":"0.2",
         "grunt-contrib-concat":"0.3",
         "grunt-contrib-watch":"0.4",
-        "grunt-contrib-imagemin":"0.3",
+        "grunt-contrib-imagemin":"0.2",
+        "grunt-svgmin": "",
         "coffee-script":"*"
     }
 }
