switched to environment variables and made a test build

--- a/backend/var/conf/fontana-example.conf
+++ b/backend/var/conf/fontana-example.conf
@@ -1,11 +1,12 @@
+import os
 # Get these by creating an app at dev.twitter.com
 TWITTER = {
-    'consumer-key': '',
-    'consumer-secret': ''
+    'consumer-key': os.environ['TWITTER_API_KEY'],
+    'consumer-secret': os.environ['TWITTER_API_CONSUMER_SECRET']
 }
 
 # Use one of the "Ft. Knox Passwords" from http://randomkeygen.com/
-SECRET_KEY = ''
+SECRET_KEY = os.environ['TWITTER_SECRET_KEY']
 
 DEBUG = True
 STATIC_DIR = './frontend/httpdocs/'
